--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ static_assertions = "1"
 structopt = "0.3"
 bevy = {version = "0.5", default_features = false, features = ["render", "x11", "wayland", "bevy_winit", "bevy_wgpu"]}
 crossbeam = "0.8"
+rayon = "1"
 
 [dev-dependencies]
 bencher = "0.1"
