--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ path = "src/bin/tag.rs"
 rand = {version = "0.8", features = ["small_rng"]}
 static_assertions = "1"
 structopt = "0.3"
-bevy = {version = "0.5", default_features = false, features = ["render", "x11", "wayland", "bevy_winit", "bevy_wgpu"]}
+bevy = {version = "0.5", default_features = false, features = ["render", "x11", "wayland", "bevy_winit"]}
 crossbeam = "0.8"
 rayon = "1"
 
